Fix for bug 212903 (XSLT bug -- incorrectly added <meta> element to results tree). r=Pike, sr=jst.